@@ -319,6 +319,9 @@ EdgeRing::addEdge(const CoordinateSequence *coords, bool isForward,
 
 /**********************************************************************
  * $Log$
+ * Revision 1.1  2006/05/02 14:22:30  strk
+ * * source/operation/polygonize/: polygonizeEdgeRing.cpp renamed to EdgeRing.cpp, to follow JTS naming.
+ *
  * Revision 1.16  2006/03/22 11:19:06  strk
  * opPolygonize.h headers split.
  *
