@@ -9,7 +9,7 @@ liboppolygonize_la_SOURCES = \
 	PolygonizeEdge.cpp \
 	PolygonizeGraph.cpp \
 	Polygonizer.cpp \
-	polygonizeEdgeRing.cpp 
+	EdgeRing.cpp 
 
 liboppolygonize_la_LIBADD = 
 
